compiler/tests/run-pass/empty.rsp
(import [risp base])

(defn main! ())