compiler/tests/compile-fail/module-user-compile-error.rsp
(import [risp base])
(compile-error "Some message") ;~ ERROR Some message